# Nextcar

./: .gitattributes  .gitignore  AGENTS.md  Nextcar.uproject  README.md
.github/: pull_request_template.md
.github/bootstrap/: BOUNDARY_DIAGNOSTIC_TRIGGER  BOUNDARY_FIX_TRIGGER  BOUNDARY_FIX_TRIGGER2  BOUNDARY_ISOLATION_TRIGGER  CLEANUP_TRIGGER  TRIGGER  TRIGGER3  TRIGGER4  TRIGGER5  TRIGGER6  WINDOWS_TRIGGER  WINDOWS_TRIGGER2  WINDOWS_TRIGGER3  WORKFLOW_FIX_TRIGGER  cp2fix-01-00  cp2fix-01-02  cp2fix-03-03  cp2fix-03-05  cp2fix-03-06  cp2part-00  cp2part-01  cp2part-01-01  cp2part-01-03  cp2part-01-04  cp2part-01-05  cp2part-01-06  cp2part-02  cp2part-03  cp2part-03-00  cp2part-03-01  cp2part-03-02  cp2part-03-04  cp2part-04  cp2part-05
.github/nc003b-bootstrap/: powershell-canary.ps1  publish-result-branch.ps1  run-source-normalization.ps1
.github/workflows/: delete-merged-branch.yml  nc003b-boundary-debug.yml  nc003b-call-final-closure.yml  nc003b-clean-transient-python-residue.yml  nc003b-delete-stale-validation.yml  nc003b-invoke-evidence-publisher-pr.yml  nc003b-invoke-evidence-publisher.yml  nc003b-patch-boundary-scan.yml  nc003b-patch-validation-workflow.yml  nc003b-phase0-checkpoint2-bootstrap.yml  nc003b-phase0-windows-validation.yml  nc003b-pr42-final-windows-gate.yml  nc003b-source-normalization-bootstrap.yml  repository-validation.yml  unreal-ci.yml  unreal-full-ci.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Plugins/NextcarEngineSim/: NextcarEngineSim.uplugin
Plugins/NextcarEngineSim/Source/NextcarEngineSimCore/: NextcarEngineSimCore.Build.cs
Plugins/NextcarEngineSim/Source/NextcarEngineSimRuntime/: NextcarEngineSimRuntime.Build.cs
Source/: Nextcar.Target.cs  NextcarEditor.Target.cs
Source/Nextcar/: ArcadeCarPawn.cpp  ArcadeCarPawn.h  ArcadeVehicleMath.h  ArcadeVehicleSimulation.h  ArcadeWheelVisuals.h  InfiniteGround.cpp  InfiniteGround.h  Nextcar.Build.cs  Nextcar.cpp  NextcarGameMode.cpp  NextcarGameMode.h  NextcarHUD.cpp  NextcarHUD.h
Source/Nextcar/Tests/: ArcadeVehicleMathTests.cpp  NextcarSmokeTests.cpp
Tests/: ArcadeVehicleMathStandaloneTests.cpp  CoreMinimal.h
Tests/EngineSimCore/Fixtures/: subaru_ej25_atg_video_2_fixture.json  subaru_ej25_cold_start_profile.json  subaru_ej25_cold_start_sweep.json
Tests/EngineSimCore/Fixtures/subaru_ej25_atg_video_2_fixture/: 01-engine-and-fuel.json  02-crankshaft-and-inertia.json  03-pistons-rods-and-intake.json  04-exhaust-banks-and-cylinders.json  05-heads-and-flow-tables.json  06-camshafts-and-valvetrain.json  07-ignition-and-firing-order.json  08-fuel-library-defaults.json  09-engine-and-system-defaults.json  10-derived-values.json  11-headless-construction.json  12-determinism-and-generated-ir.json  13-excluded-non-headless.json
ThirdPartyNotices/: simple-2d-constraint-solver.txt
Tools/EngineSimVendor/: COLD_START_CALIBRATION.md  FIXTURE_TRANSCRIPTION.md  PATCHES.md  RECONSTRUCTION_AUDIT.md  RUNNER_BOOTSTRAP_REQUEST  SOURCE_MANIFEST.json  UPDATE.md  WIP_CHECKPOINT.md  bootstrap_on_runner.ps1  generate_cold_start_profile_header.py  generate_impulse_response_header.py  record_cold_start_calibration_evidence.py  run_cold_start_calibration.py  validate_cold_start_windows.ps1  verify_cold_start_profile.py  verify_fixture_source_snapshot.py  verify_impulse_response.py  verify_subaru_ej25_fixture.py
Tools/EngineSimVendor/.transport/: final-000.b64  final-001.b64  final-002.b64  final-003.b64  final-004.b64
Tools/EngineSimVendor/.upload/: chunk-000
Tools/EngineSimVendor/FixtureSourceSnapshot/: SNAPSHOT.json
Tools/EngineSimVendor/SourceInputs/: .gitattributes  ARCHIVE_SHA256.txt  README_STAGE.md
Tools/EngineSimVendor/Standalone/: CMakeLists.txt
Tools/EngineSimVendor/Standalone/calibration/: cold_start_calibration_main.cpp
Tools/EngineSimVendor/Standalone/tests/: cold_start_calibration_tests.cpp  cold_start_profile_tests.cpp  phase0_standalone_tests.cpp
Tools/EngineSimVendor/WorkflowBlob/: metadata-fix.json  nc003b-phase0-final-closure-windows.yml
Tools/EngineSimVendor/tests/: test_cold_start_profile_verifier.py  test_fixture_source_snapshot.py  test_impulse_response_tools.py  test_subaru_ej25_fixture_verifier.py
Tools/EngineSimVendor/validate_cold_start_windows.parts/: part00.ps1frag  part01.ps1frag  part02.ps1frag  part03.ps1frag  part04.ps1frag
docs/: engine-sim-integration-contract.md  manager-history.md  windows-self-hosted-runner.md
scripts/: validate_repository.py
(+12 files in other folders)
